@@ -1,3 +1,8 @@
+Tue Mar 30 20:25:34 2004  Tanaka Akira  <akr@m17n.org>
+
+	* time.c (search_time_t): limit guess range by mktime if it is
+	  availabe.
+
 Tue Mar 30 18:19:00 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_eval): fix SEGV at retry in iterator's receiver.
